# offside-june-2026

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  JUDGE.md  LICENSE  LICENSES.md  Makefile  README.md  docker-compose.studio.yml
engine/: Dockerfile.studio  README.md  bake.ipynb  pyproject.toml
engine/data/eval/: groundedness_report.json  groundedness_report.md
engine/offside_engine/: __init__.py  cli.py  config.py  export_types.py  mcp_server.py
engine/offside_engine/analyze/: __init__.py  granite_client.py  guardian.py  guardian_gate.py  lens_runner.py  prompts.py  split_schema.py
engine/offside_engine/bake/: __init__.py  bake.py  corpus_pool.py  incident.py  integrity.py  probe.py  probe_specs.py  runner.py  synthesize.py  (+1 more)
engine/scripts/: analyze_live.py  bake_local.py  eval_groundedness.py
engine/tests/: test_bake.py  test_bake_streaming.py  test_build_lance.py  test_corpus_pool.py  test_curate.py  test_curated_lenses.py  test_docling_extract.py  test_embed.py  test_eval_groundedness.py  test_export_types.py  test_fixtures_contrast.py  test_granite_client.py  test_guardian.py  test_guardian_gate.py  test_incident_bundle.py  test_incident_from_form.py  test_integrity.py  test_lens_retrieve.py  test_lens_runner.py  test_mcp_server.py  test_no_numbers_in_granite_schema.py  test_orchestrate_graph.py  test_persist.py  test_prompts.py  test_runner.py  test_serve_app.py  test_serve_run.py  test_serve_stream_mode.py  test_split_schema.py  test_statsbomb_aggregate.py  test_studio_integrity.py  test_synthesize.py  test_write_fixture.py
(+81 files in other folders)
