[project]
name = "offside-engine"
version = "0.1.0"
description = "OFFSIDE build-time engine — Docling ingest, per-lens retrieval, and IBM Granite synthesis that writes frozen JSON fixtures for the web app."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "Hriday Vig", email = "vighriday@gmail.com" }]
dependencies = [
    "docling==2.105.0",
    "lancedb==0.33.0",
    "ollama>=0.6.0",
    "statsbombpy==1.19.0",
    "pydantic>=2.9",
    "jsonschema>=4.23",
    "typer>=0.12",
    "pyyaml>=6.0",
    "langgraph>=0.2",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]
# RAGAS faithfulness scoring is an OPTIONAL build-time audit (heavy: langchain + datasets).
# The groundedness report runs without it via a deterministic citation-coverage proxy;
# install this extra to score lens faithfulness with RAGAS against a local Granite judge.
eval = [
    "ragas>=0.2",
]
serve = ["fastapi>=0.115", "sse-starlette>=2.1", "uvicorn>=0.30"]

[project.scripts]
offside = "offside_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["offside_engine"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
